--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
             <div class="swiper-wrapper">
                 <div class="swiper-slide">
                     <div class="page1-lovexhj1">
-                        <img src="https://q1.qlogo.cn/g?b=qq&nk=304915556&s=640" alt="xhj">
+                        <!-- <img src="https://q1.qlogo.cn/g?b=qq&nk=304915556&s=640" alt="xhj"> -->
                         <img src="./images/cat.gif" alt="cat">
-                        <img src="https://q1.qlogo.cn/g?b=qq&nk=1656071287&s=640" alt="tqy">
+                        <!-- <img src="https://q1.qlogo.cn/g?b=qq&nk=1656071287&s=640" alt="tqy"> -->
                         <p id="lovetime"></p>
                         <p>我也不知道该准备一点什么给你逗你开心</p>
                         <p>还是写一点好玩的送给你吧~</p>
@@ -82,15 +82,15 @@
                     <div class="page2-box">
                         <img src="./images/page-2-1.jpg" alt="page2-1">
                         <p><b>故事的开始</b></p>
-                        <p>2018-11-19</p>
+                        <p>2019-10-19</p>
                         <p>我们的故事，从此开始</p>
                     </div>
                 </div>
                 <div class="swiper-slide">
                     <div class="page2-box">
                         <img src="./images/page-2-2.jpg" alt="page2-2">
-                        <p><b>第一次抱我大腿</b></p>
-                        <p>还记得第一次你走不动的时候抱着我大腿不愿意走的时候吗？</p>
+                        <p><b>第一次我背你</b></p>
+                        <p>还记得第一次你走不动的时候你要我背着你走吗？</p>
                     </div>
                 </div>
                 <div class="swiper-slide">
@@ -98,15 +98,15 @@
                         <img src="./images/page-2-3.jpg" alt="page2-3">
                         <p><b>第一次喝奶茶</b></p>
                         <p>你总是把腿搭在我的大腿上</p>
-                        <p>扯你帽子的时候我们开心的和小孩一样</p>
+                        <p>拉拉扯扯的时候我们开心的和小孩一样</p>
                     </div>
                 </div>
                 <div class="swiper-slide">
                     <div class="page2-box">
                         <img src="./images/page-2-4.jpg" alt="page2-4">
-                        <p><b>第一次走在雪地上</b></p>
+                        <p><b>第一次走在回家的路上</b></p>
                         <p>天气很冷，但与你在一起玩却很暖和</p>
-                        <p>一起在雪地上涂鸦，看你画猪头哈哈</p>
+                        <p>我们坐着同一辆火车，一起回家</p>
                     </div>
                 </div>
                 <div class="swiper-slide">
@@ -121,8 +121,8 @@
                     <div class="page2-box">
                         <img src="./images/page-2-6.jpg" alt="page2-6">
                         <p><b>第一次庆祝我的生日</b></p>
-                        <p>吃牛排看电影</p>
-                        <p>很俗气但很开心</p>
+                        <p>订了榴莲蛋糕</p>
+                        <p>很好吃也很开心</p>
                     </div>
                 </div>
                 <div class="swiper-slide">
@@ -144,8 +144,8 @@
                     <div class="page2-box">
                         <img src="./images/page-2-9.jpg" alt="page2-9">
                         <p><b>第一次与你打游戏</b></p>
-                        <p>看你输了“赛车”时生气的样子好好笑</p>
-                        <p>并偷偷在后面摸了一下你的猪头</p>
+                        <p>虽说是游戏，却是打字比赛</p>
+                        <p>作为学计算机的我，却一次都没赢过你</p>
                     </div>
                 </div>
                 <div class="swiper-slide">
@@ -166,7 +166,7 @@
         <div id="talkToXHJ">
             <b>回顾上一个520</b>
             <br />
-            当时你从外面特地跑过来找我，我知道你超级超级害怕晕车，但是还是为了当天见到我，坐车回来了，当我听见你要回来的时候我还以为你在骗我哈哈，结果晚上真的见到你了，你一下车就冲过来抱住了我，这个画面回想起来仿佛就发生在昨天一样清晰...
+            每当我受伤的时候，你总是非常的担心我，小小的伤口都会让你心疼不已。说实话，我非常的感动，都忘了是什么时候了，我想，我认定你了，和你在一起的日子成了我的习惯。相信我们的未来肯定会愈加美好！！！！
             <br />
             <br />
             <b>这是我们的第二个520</b>
@@ -186,9 +186,9 @@
             <br />
             用文字来对你说一些话感觉好像情书一样尴尬哈哈，那就不说了我
             <br />
-            节日快乐猪
+            节日快乐，傻瓜
             <br />
-            ## 爱你的仔仔 (๑′ᴗ‵๑)~ ❤
+            ## 爱你的人 (๑′ᴗ‵๑)~ ❤
         </div>
     </div>
 
@@ -242,11 +242,11 @@
         <div class="footer">
             <div class="footerBox">
                 <p>
-                    &copy; 2020 
+                    &copy; 2021 
                     <a href="https://lovexhj.cn">TQY && XHJ</a> | 
                     <a href="http://beian.miit.gov.cn">湘ICP备18015792号-2</a>
                 </p>
-                <p>THEME MADE BY <a href="https://lovexhj.cn">lovexhj</a></p>
+                <p>THEME MADE BY <a href="https://lovexhj.cn">loveKMX</a></p>
             </div>
         </div>
     </div>
